<resources>
    <string name="app_name" translatable="false">wallet_bottom-nav</string>
    <string name="title_profile" translatable="false">Profile</string>
    <string name="title_wallet" translatable="false">Wallet</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_chart" translatable="false">Chart</string>
    <string name="title_exchange" translatable="false">Exchange</string>

    <string name="edit_message" translatable="false">Enter a message</string>
    <string name="button_send" translatable="false">Send</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>